--- a/index.html
+++ b/index.html
@@ -18,15 +18,14 @@
       <li class="nav-item">
         <a class="nav-link" href="#Library">Библиотека</a>
       </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Искусство
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#Patronage">Покровительство</a>
-          <a class="dropdown-item" href="#lastYears">Последние годы</a>
-          <a class="dropdown-item" href="#Facts">Факты</a>
-        </div>
+      <li class="nav-item">
+        <a class="nav-link" href="#Patronage">Покровительство</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#lastYears">Последние годы</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#Facts">Факты</a>
       </li>
       <button class="btn" type="submit" onclick="location.href = 'index1.html'">Политика</button>
     </ul>
@@ -87,8 +86,6 @@
       <button id="btn" class ="btn-add">Ещё</button>
       <div id="additional-info"></div>
       <script src="index.js"></script>
-
-
     </div>
   </div>
 </div>
@@ -135,10 +132,6 @@
     </div>
   </div>
 </div>
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </body>
 
