--- a/index1.html
+++ b/index1.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-  <link rel="stylesheet" href="index1.css">
+  <link rel="stylesheet" href="src/index1.css">
   <title> Lorenzo de' Medici </title>
 </head>
 
